--- a/Ejercicio6/Ejercicio6/Ejercicio6.vbproj
+++ b/Ejercicio6/Ejercicio6/Ejercicio6.vbproj
@@ -184,6 +184,7 @@
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="styles.css" />
+    <Content Include="Tensor.aspx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
   </ItemGroup>
@@ -246,6 +247,13 @@
     <Compile Include="Site.Master.vb">
       <DependentUpon>Site.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Tensor.aspx.designer.vb">
+      <DependentUpon>Tensor.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Tensor.aspx.vb">
+      <DependentUpon>Tensor.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="ViewSwitcher.ascx.vb">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
