--- a/Ejercicio6/Ejercicio6/Ejercicio6.vbproj
+++ b/Ejercicio6/Ejercicio6/Ejercicio6.vbproj
@@ -130,13 +130,16 @@
     <Import Include="System.Web.UI.HtmlControls" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="5g.aspx" />
     <Content Include="About.aspx" />
+    <Content Include="aws.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="data.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -189,6 +192,13 @@
     <Content Include="Bundle.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="5g.aspx.designer.vb">
+      <DependentUpon>5g.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="5g.aspx.vb">
+      <DependentUpon>5g.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
     <Compile Include="App_Start\BundleConfig.vb" />
     <Compile Include="App_Start\RouteConfig.vb" />
     <Compile Include="About.aspx.designer.vb">
@@ -198,11 +208,25 @@
       <DependentUpon>About.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
+    <Compile Include="aws.aspx.designer.vb">
+      <DependentUpon>aws.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="aws.aspx.vb">
+      <DependentUpon>aws.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
     <Compile Include="Contact.aspx.designer.vb">
       <DependentUpon>Contact.aspx</DependentUpon>
     </Compile>
     <Compile Include="Contact.aspx.vb">
       <DependentUpon>Contact.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="data.aspx.designer.vb">
+      <DependentUpon>data.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="data.aspx.vb">
+      <DependentUpon>data.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="Default.aspx.vb">
